headdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headapp-deployment
  labels:
    app: headapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: head
  template:
    metadata:
      labels:
        app: head
    spec:
      containers:
      - name: headappcontainer
        image: sandeep141989/myheadapp:01
        ports:
        - containerPort: 8080
