toDodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  labels:
    app: todoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todoappcontainer
        image: sandeep141989/todoapp:01
        ports:
        - containerPort: 8081
