headservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: head-service
spec:
  selector:
    app: head
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
